Changed overflow from scroll to visible to avoid scrollbars

--- a/src/LaDanse/SiteBundle/Resources/public/css/menu-new.css
+++ b/src/LaDanse/SiteBundle/Resources/public/css/menu-new.css
@@ -58,7 +58,7 @@
 
 #menu-container div.menu-news
 {
-    overflow: scroll !important;
+    overflow: visible !important;
     white-space: normal !important;
     margin-top: 15px;
 }
